# fastxio

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md
apps/contaminant_filter/: CMakeLists.txt
apps/contaminant_filter/src/: main.cpp
apps/extr_prom/: CMakeLists.txt
apps/extr_prom/src/: main.cpp
apps/kmer_map/: CMakeLists.txt
apps/kmer_map/src/: main.cpp
apps/ta_sites/: CMakeLists.txt
apps/ta_sites/src/: main.cpp
bz2stream/: bz2stream.cpp  bz2stream.h
docker/: Dockerfile
examples/: count_freq.cpp  enumerate_iupac.cpp  faux_matepair.cpp  generate_kmers.cpp  generate_window.cpp  numeric_qual.cpp  p33.fa  p33.fa.bz2  print_wrapped.cpp  reverse_complement.cpp  subseq.cpp  test  translate.cpp  validate.cpp
generic_matrix/: matrix.h
src/: fastxio_auxiliary.cpp  fastxio_auxiliary.h  fastxio_common.cpp  fastxio_common.h  fastxio_gff.cpp  fastxio_gff.h  fastxio_minhash.cpp  fastxio_minhash.h  fastxio_nuc_frequency.cpp  fastxio_nuc_frequency.h  fastxio_reader.cpp  fastxio_reader.h  fastxio_record.cpp  fastxio_record.h  fastxio_smith_waterman.cpp  fastxio_smith_waterman.h  fasxtio_genstats.h
